# synx

./: .auth.env  .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
src/synx/: __init__.py  __main__.py  auth_config.py  code_executor.py  config.py  logger.py  main.py  mcp_server.py  sessions.py
src/synx/auth/: token_verifier.py
tests/: __init__.py  test_main.py  test_mcp_server.py
